# overmove

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json
src/: App.tsx  convertVersionData.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
