[package]
name = "overmove"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "overmove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-geolocation = "2.2.4"
tauri-plugin-log = "2.4.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-dialog = "2.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

